@startuml domain-class
title WorkflowDev — Classes centrais do domínio
skinparam classAttributeIconSize 0

class Issue <<aggregate root>> {
  +id : string
  +action : ActionType
  +status : IssueStatus
  +owner : Actor | null
  +tags : Tags
  +relates : Relation[]
  +worktree : Worktree | null
  +architecture_changed : boolean | null
  --
  claim(actor)
  submit(agent, evidence)
  closeByAgent(agent, evidence, reason)
  closeByHuman(comment, reason)
  decide(status, comment, reason)
  reset(comment)
  relate(relations)
  tag(updates, actor)
}

class Artifact {
  +id : string
  +issueId : string
  +type : ArtifactType
  +name : string
  +mediaType? : MediaType
  +size : number
  {static} text(input)
  {static} media(input)
}

enum ArtifactType {
  media
  document
  requirement
  uml
  implementation-plan
}

class GateDefinition {
  +action : ActionType
  +name : string
  +artifacts : Requirement
  +codeExecution : Requirement
  +humanApproval : Requirement
}

class GatePolicy {
  assess(tags, facts) : GateAssessment
}

enum GateAssessment {
  approved
  human-required
  rejected
}

class Queue <<concrete>> {
  +artifacts : ArtifactStore
  save/load/list/oldestOpen
  write/read/listProjects
  purgeClosed
}

class ArtifactStore <<concrete>> {
  writeText/readText/list
  writeMedia/findMedia
  purgeIssue/purgeMedia
}

Issue "1" o-- "many" Artifact : owner lógico
Issue ..> GateDefinition : action seleciona
GateDefinition --> ArtifactType : exige
GateDefinition --> GatePolicy : governa conclusão
GatePolicy ..> GateAssessment
Artifact --> ArtifactType
Queue --> Issue : persiste
Queue *-- ArtifactStore

note right of Issue
  Não conhece filesystem, PlantUML,
  Git, checks ou gates por Action.
end note

note bottom of ArtifactStore
  API unificada; layout físico legado
  preservado por compatibilidade.
end note
@enduml
